<resources>
    <string name="app_name">hoySeSale</string>
    <string name="titulo">login</string>
    <string name="email">Email</string>
    <string name="contraseña">contraseña</string>
    <string name="Login">Login</string>
    <string name="Home">Bienvenidos</string>
    <string name="registroNombre">Nombre</string>
    <string name="registroApellido">Apellido</string>
    <string name="registroEmail">Email</string>
    <string name="registroContraseña">Contraseña</string>
    <string name="registroRegistrarse">Registrarse</string>
</resources>
